--- Auto-Git Commit ---

--- a/Function.html
+++ b/Function.html
@@ -8,10 +8,7 @@
 </head>
 <body>
     <script src = 'Function.js'></script>
-    <h1>Functions on JavaScript Basics
-
-        i wanna see the changes on github 
-        this is just a demonstration
-    </h1>
+    <h1>Functions on JavaScript</h1>
+    this is it
 </body> 
 </html>
