--- a/Object-Oriented JavaScript/OOP-Basic.html
+++ b/Object-Oriented JavaScript/OOP-Basic.html
@@ -8,6 +8,6 @@
 </head>
 <script src='OOP-Basic.js'></script>
 <body>
-    
+    <h1> BASICS OF OBJECTS ORIENTED PROGRAMMING </h1>
 </body>
 </html>
